# interfaces

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  conanfile.py  gui.bat
cmake/: AdasInterfacesConfig.cmake  proto_generate.cmake
conf/: build.yml
cpp/: proto_stubs.hpp
cpp/functions/: IACCController.hpp  IAEBController.hpp  ILKAController.hpp
cpp/fusion/: IFusionEngine.hpp
cpp/lane/: ILaneDetector.hpp
cpp/perception/: IFreeSpaceDetector.hpp  IObjectDetector.hpp  IObjectTracker.hpp
cpp/planning/: IPathPlanner.hpp
proto/Aeb__Outputs/: aeb_hyp_reaction.proto  aeb_outputs.proto
proto/PerceptionCore__Outputs/: gen_object.proto  gen_object_list.proto
proto/VehSigProvider__Outputs/: veh_dyn.proto
proto/common/: common.proto  comp_state.proto  signal_header.proto  veh_dyn.proto  veh_sig.proto  vehicle_state.proto
proto/control/: control_command.proto
proto/functions/: comp_state.proto  fcw.proto
proto/fusion/: scene_model.proto
proto/isp/: frame.proto
proto/lane/: lane.proto
proto/perception/: detection.proto  free_space.proto  object.proto  track.proto
proto/planning/: trajectory.proto
proto/radar/: radar_object.proto
scripts/: interfaces_gui.py
